Table users {
  id           int [pk, increment]
  email         varchar(255) [unique, not null]
  nickname     varchar(50) [not null]
  friend_code  varchar(20) [unique, not null]
  avatar_url   text
  created_at   datetime
  updated_at   datetime
}

Table messages {
  id          int [pk, increment]
  sender_id   int [ref: > users.id]
  receiver_id int [ref: > users.id]
  content     text [not null]
  created_at  datetime
}

Table message_reads {
  id          int [pk, increment]
  message_id  int [ref: > messages.id]
  reader_id   int [ref: > users.id]
  read_at     datetime
}

Table friends {
  id          int [pk, increment]
  user_id     int [ref: > users.id]
  friend_id   int [ref: > users.id]
}

Table friend_requests {
  id            int [pk, increment]
  requester_id  int [ref: > users.id]
  receiver_id   int [ref: > users.id]
  status        enum('pending', 'accepted', 'rejected') [not null]
  created_at    datetime
}

